refactor: remove database configuration and update default metadata
Signed-off-by: Christopher Scherling <christopher.scherling@helvetia.at>